FIX navbar on mobile device

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -216,6 +216,7 @@ body {
 
 @media screen and (max-width: 800px) {
   .sidebar {
+    position: absolute;
     left: 0;
   }
 
